# sd_sdk_utils

./: README.md  pyproject.toml
configs/: binaural_pair_default.param  fire_cube_left_ha.param  left_only.param
scripts/: cmd_line_args.py  common.py  configure_binaural_pair.py  configure_device.py  confirm_sdk.py  test.py
